[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "asyncmost_vasiaplaton"
version = "0.1.0"
authors = [
  { name="Vasilii Platon", email="vasia.platon@gmail.com" },
]
description = "A Python package to async interact with Mattermost API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.20.0,<1.0.0"
]
[project.urls]
Homepage = "https://github.com/vasiaplaton/asyncmost"
Issues = "https://github.com/vasiaplaton/asyncmost/issues"